--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -14,12 +14,17 @@
 h1, h2, h3, h4, h5, h6 {
   margin:0;
   padding:0;
-}
+}  
 body {
-  background: image_url('assets/crossword.png');
+  background: url('/assets/crossword.png');
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 .navbar {
   background: image_url('cartographer.png');
    box-shadow: 0px 1px 3px #2a2a2a;
+   }
+ .navbar-inverse .navbar-brand {
+color: #E3E85A;
+font-family: 'quicksandbold_italic', sans-serif;
+font-size:26px;
 }
