--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -29,3 +29,9 @@ color: #E3E85A;
 font-family: 'quicksandbold_italic', sans-serif;
 font-size:26px;
 }
+.invalid-feedback {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+}
