--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,14 +10,6 @@
       <small><%= place.user.email %></small>
     <% end %>
 
-  </div>
-</div class="caption">
- <%= photo.caption %>
- </div>
-  <% end %>
-  <5 end %>
-</div>
-</div>
 
 <% if place.comments.present? %>
   <div class="col-12">
@@ -30,10 +22,10 @@
       </blockquote>
     </div>
   <% end %>
-  </div>
+</div>
 <% end %>
 
- <div class="col-10 offset-1">
-    <%= will_paginate @places, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+    <div class="col-10 offset-1">
+    <%= will_paginate @places, previous_label: h("<"), next_label: h(">") %>
 </div>
   
