--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,13 +6,13 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-       <img class="d-block img-fluid" src="..." alt="First slide">
+       <%= image_tag "slider1.jpg", class: "d-block img-fluid" %>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="..." alt="Second slide">
+      <%= image_tag "slider1.jpg", class: "d-block img-fluid" %>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="..." alt="Third slide">
+      <%= image_tag "slider1.jpg", class: "d-block img-fluid" %>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
