styling the user profile

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -9,10 +9,10 @@
        <%= image_tag "slider1.jpg", class: "d-block img-fluid" %>
     </div>
     <div class="carousel-item">
-      <%= image_tag "slider1.jpg", class: "d-block img-fluid" %>
+      <%= image_tag "Tosca.jpg", class: "d-block img-fluid" %>
     </div>
     <div class="carousel-item">
-      <%= image_tag "slider1.jpg", class: "d-block img-fluid" %>
+      <%= image_tag "PC.jpg", class: "d-block img-fluid" %>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
