--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
     <ul class="navbar-nav">
       <% if user_signed_in? %>
       <li class="nav-item">
+        <%= image_tag "user.png", class: "small-image" %> 
       <%= link_to 'My Profile', user_path(current_user), class: 'nav-link' %>
     </li>
         <li class="nav-item">
